flicker fix 3

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,20 +41,16 @@ body::-webkit-scrollbar {
     background-repeat: no-repeat;
     background-position: center;
     
-    height: 100vh;
-    width: 100vw;
+    inset: 0;
 
     z-index: -1;
 }
 
 .content {
     position: absolute;
-/* 
-    left: 0;
-    right: 0; */
 
-    inset: 0;
-    z-index: 0;
+    left: 0;
+    right: 0;
 }
 
 .faces {
